<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/loansimu"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginRight="@dimen/default_margin"
            android:text="@string/loan_simulator"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:startIconDrawable="@drawable/ic_loan" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/loan_amount_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginRight="@dimen/default_margin"
            app:boxStrokeColor="@color/colorAccent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loansimu">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loan_amount"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:clickable="true"
                android:focusable="true"
                android:hint="@string/loan_amount"
                android:inputType="number"
                android:paddingBottom="8dp"
                android:textAlignment="center"
                android:textSize="12sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/contribution_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginRight="@dimen/default_margin"
            app:boxStrokeColor="@color/colorAccent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loan_amount_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/contribution"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:clickable="true"
                android:focusable="true"
                android:hint="@string/personal_contribution"
                android:inputType="number"
                android:paddingBottom="8dp"
                android:textAlignment="center"
                android:textSize="12sp" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/rate_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginRight="@dimen/default_margin"
            app:boxStrokeColor="@color/colorAccent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/contribution_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/rate"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:clickable="true"
                android:focusable="true"
                android:hint="@string/rate"
                android:inputType="numberDecimal"
                android:paddingBottom="8dp"
                android:textAlignment="center"
                android:textSize="12sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lenght_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginRight="@dimen/default_margin"
            app:boxStrokeColor="@color/colorAccent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rate_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/years"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:clickable="true"
                android:focusable="true"
                android:hint="@string/length_years"
                android:inputType="number"
                android:paddingBottom="8dp"
                android:textAlignment="center"
                android:textSize="12sp" />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/loan_calculation"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/loan_calculation"
            android:textSize="12sp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lenght_layout"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginTop="50dp"
            android:layout_marginRight="@dimen/default_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loan_calculation">

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/monthly_payment"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/loan_monthly_payment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:textSize="20sp"
                android:textColorHint="@color/lightGray"
                android:gravity="center"
                android:textColor="@color/colorAccent"
                android:textStyle="bold" />
        </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>